WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13428
REGRESSION (
r20973
-
r20976
): Failing ecma/Array/15.4.4.5-3.js
https://bugs.webkit.org/show_bug.cgi?id=13428
Summary
REGRESSION (r20973-r20976): Failing ecma/Array/15.4.4.5-3.js
mitz
Reported
2007-04-21 00:10:47 PDT
Probably a result of <
http://trac.webkit.org/projects/webkit/changeset/20974
>.
Attachments
Patch for this bug and bug 13429
(1.93 KB, patch)
2007-04-21 01:29 PDT
,
mitz
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2007-04-21 01:29:12 PDT
Fixed with
r20991
.
mitz
Comment 2
2007-04-21 01:29:59 PDT
Created
attachment 14119
[details]
Patch for this bug and
bug 13429
Reviewed by Adam on IRC. Landed by Mark Rowe. Why am I even bothering with posting the patch now?
Adam Roben (:aroben)
Comment 3
2007-04-21 01:32:27 PDT
(In reply to
comment #2
)
> Created an attachment (id=14119) [edit] > Patch for this bug and
bug 13429
> > Reviewed by Adam on IRC. Landed by Mark Rowe. Why am I even bothering with > posting the patch now? >
Because you're a crazy son of a gun, that's why!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug