2007-04-21  Mitz Pettel  <mitz@webkit.org>

Reviewed by Adam.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13428
          REGRESSION (r20973-r20976): Failing ecma/Array/15.4.4.5-3.js

        - fix http://bugs.webkit.org/show_bug.cgi?id=13429
          REGRESSION (r20973-r20976): Crashing in fast/dom/plugin-attributes-enumeration.html

        * kjs/array_object.cpp:
        (ArrayInstance::sort): Free the old storage, not the new one.


git-svn-id: svn://svn.chromium.org/blink/trunk@20991 bbb929c8-8fbe-4397-9dbb-9b2b20218538