third_party/WebKit/JavaScriptCore/kjs/array_object.cpp
@@ -318,8 +318,8 @@ void ArrayInstance::sort(ExecState* exec)
         JSValue** storageCopy = static_cast<JSValue**>(fastMalloc(capacity * sizeof(JSValue*)));
         memcpy(storageCopy, storage, capacity * sizeof(JSValue*));
         mergesort(storageCopy, lengthNotIncludingUndefined, sizeof(JSValue *), compareByStringForQSort);
-        storage = storageCopy;
         fastFree(storage);
+        storage = storageCopy;
         execForCompareByStringForQSort = oldExec;
         return;
     }
@@ -385,6 +385,7 @@ void ArrayInstance::sort(ExecState* exec, JSObject* compareFunction)
         JSValue** storageCopy = static_cast<JSValue**>(fastMalloc(capacity * sizeof(JSValue*)));
         memcpy(storageCopy, storage, capacity * sizeof(JSValue*));
         mergesort(storageCopy, lengthNotIncludingUndefined, sizeof(JSValue *), compareWithCompareFunctionForQSort);
+        fastFree(storage);
         storage = storageCopy;
         compareWithCompareFunctionArguments = oldArgs;
         return;
